# DesktopMiniScreen

./: CMakeLists.txt  Kconfig.projbuild  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  hello_world_main.c  main.c
main/include/: ds_system_data.h
main/include/data/: ds_data_image.h
main/include/draw/: ds_font.h
main/include/driver/: ds_ft6336.h  ds_screen.h
main/include/fs/: ds_spiffs.h
main/include/hal/: ds_gpio.h  ds_i2c.h  ds_nvs.h  ds_spi.h
main/include/net/: ds_http_request.h  ds_http_server.h  ds_wifi_ap.h
main/src/: ds_system_data.c
main/src/driver/: ds_ft6336.c  ds_screen.c
main/src/fs/: ds_spiffs.c
main/src/hal/: ds_gpio.c  ds_i2c.c  ds_nvs.c  ds_spi.c  ds_timer.c
main/src/net/: ds_http_request.c  ds_wifi_ap.c  ds_wifi_sta.c
